En este commit acabé la pagina, solo me falta optimizar imagenes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="meditación, yoga, ropa, clases, velas, articulos, comunidad">
   <meta name="description" content="Encuentra todo lo que necesitas para mejorar tu práctica de meditación y yoga en nuestra tienda en línea. ¡Explora nuestra tienda en línea hoy y comienza a transformar tu práctica de meditación y yoga">
   <!-- Bootstrap CSS -->
@@ -17,13 +17,13 @@
 <body class="bodybackgroundcolor1">
 
   <!-- AQUI VA EL ENCABEZADO -->
-  <aside class="container-fluid bg-primary d-flex justify-content-center">
+  <aside class="container-fluid colornavfooter d-flex justify-content-center">
     <p class="text-light my-0 p-2 ">
       Contáctanos: +(57) 300 567 264 2
     </p>
   </aside>
 <header>
-  <nav id="top" class="navbar navbar-expand-lg navbar-light bg-light estiloa m-3">
+  <nav id="top" class="navbar navbar-expand-lg navbar-light bg-light estiloa m-3 colornavfooter">
     <div class="container-fluid">
       <img class="logo-small me-5" src="./multimedia/imagenes/logob.JPG" alt="logo de tienda">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -50,7 +50,7 @@
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Escribe aquí para buscar" aria-label="Search">
-          <button class="btn btn-primary btn-primary-outline-success" type="submit">Buscar</button>
+          <button class="btn colornavfooter btn-primary-outline-success" type="submit">Buscar</button>
         </form>
       </div>
     </div>
@@ -59,10 +59,10 @@
   
   <main>
     <!-- Sistema de grillas bootstrap -->
-    <div class="container ">
+    <div class="container my-4">
       <section class="row">
         <div class="col-md-12 contenedormain">
-          <h1 class="colorh2 ">UNA VIDA <span>ZEN</span></h1>
+          <h1>UNA VIDA <span>ZEN</span></h1>
           <p>Ropa, articulos de meditación y clases de yoga. </p>
         </div>
       </section>
@@ -73,21 +73,21 @@
         </div>
       </section>
     </div>
-    <div class="container contenedormainbordeinferior1 my-2">
-      <section class="row">
+    <div class="container contenedormainbordeinferior1 my-4">
+      <section class="row my-4">
         <div class="col-xl-6 col-sm-12 col-md-6 d-flex justify-content-center align-items-center flex-column">
           <h2>¿Porqué <span>meditar</span>?</h2>
           <img src="./multimedia/imagenes/imagenes index/meditar.jpg" alt="Imagen de meditación">
         </div>
-        <div class="col-xl-6 col-sm-12 col-md-6 my-5 d-flex align-items-center justify-content-center p-5">
+        <div class="col-xl-6 col-sm-12 col-md-6 my-5 d-flex align-items-center justify-content-center ">
           <p>Meditar mejora la salud mental y emocional al reducir el estrés, la ansiedad y la depresión. Mejora la
             concentración y la claridad mental además de aumentar la sensación de bienestar general.</p>
         </div>
       </section>
     </div>
-    <div class="container contenedormainbordeinferior1 my-2">
-      <section class="row">
-        <div class="col-xl-6 col-sm-12 col-md-6 p-5 d-flex justify-content-center align-items-center flex-column">
+    <div class="container contenedormainbordeinferior1 my-4">
+      <section class="row my-4" >
+        <div class="col-xl-6 col-sm-12 col-md-6  d-flex justify-content-center align-items-center flex-column">
           <h2 class="">¿ Y el <span>yoga</span> ?</h2>
           <p>El yoga es una práctica que mejora tu salud mental al mismo tiempo que fortaleces tu cuerpo. Esto te
             permite
@@ -100,11 +100,11 @@
     </div>
     <div class="container  my-2">
       <section class="row">
-        <div class="col-xl-12 col-sm-12 col-md-12 p-5 d-flex justify-content-center  flex-column ">
-          <h2 class="colorh2">¡Practica con nosotros!</h2>
+        <div class="col-xl-12 col-sm-12 col-md-12  d-flex justify-content-center  flex-column ">
+          <h2>¡Practica con nosotros!</h2>
           <a class="my-5 contenedorropa1" href="./paginas/clases.html"><img
               src="./multimedia/imagenes/imagenes index/practicanosotros.jpg" alt="Imagen gente riendo"></a>
-          <p class="colorfondotitulojogger">Sé parte de nuestra familia OA. Contamos con lo que necesitas para vivir una
+          <p>Sé parte de nuestra familia OA. Contamos con lo que necesitas para vivir una
             experiencia zen.</p>
         </div>
       </section>
@@ -112,7 +112,7 @@
   </main>
 
 
-  <footer class="container-fluid bg-primary d-flex justify-content-center align-items-center my-0 ">
+  <footer class="container-fluid colornavfooter d-flex justify-content-center align-items-center my-0 colornavfooter ">
     <div class="contenedorfooter m-3">
       <p class="text-light my-0 p-2 ">
         Sígunenos en nuestras redes:
@@ -126,7 +126,6 @@
         <a class="nav-link active" aria-current="page" href="">Instagram</a>
       </div>
     </div>
-
   </footer>
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
