--- a/paginas/clases.html
+++ b/paginas/clases.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="comunidad, latinoamerica, clases, online, clases en grupo">
     <meta name="description" content="Únete a nuestras clases de yoga en grupo, individuales o en línea para encontrar la paz interior y la armonía en tu cuerpo y mente. Nuestros experimentados instructores te guiarán a través de una práctica de yoga auténtica y accesible, diseñada para satisfacer tus necesidades y objetivos personales.">
     <!-- Bootstrap CSS -->
@@ -19,46 +19,45 @@
 <body>
 
     <!-- AQUI VA EL ENCABEZADO -->
-    <header class="container-fluid bg-primary d-flex justify-content-center">
-        <p class="text-light my-0 p-2 ">
-            Contáctanos: +(57) 300 567 264 2
-        </p>
-    </header>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light estiloa m-3">
-        <div class="container-fluid">
-            <img class="logo-small me-5" src="../multimedia/imagenes/logob.JPG" alt="logo">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item m">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../paginas/ropa.html">Ropa</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../paginas/articulos.html">Artículos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../paginas/nosotros.html"> Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../paginas/clases.html">Clases</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Escribe aquí para buscar"
-                        aria-label="Search">
-                    <button class="btn btn-primary btn-primary-outline-success" type="submit">Buscar</button>
-                </form>
-            </div>
+    <aside class="container-fluid colornavfooter d-flex justify-content-center">
+      <p class="text-light my-0 p-2 ">
+        Contáctanos: +(57) 300 567 264 2
+      </p>
+    </aside>
+  <header>
+    <nav id="top" class="navbar navbar-expand-lg navbar-light bg-light estiloa m-3 colornavfooter">
+      <div class="container-fluid">
+        <img class="logo-small me-5" src="../multimedia/imagenes/logob.JPG" alt="logo de tienda">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item m">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="ropa.html">Ropa</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="articulos.html">Artículos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nosotros.html"> Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="clases.html">Clases</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Escribe aquí para buscar" aria-label="Search">
+            <button class="btn colornavfooter btn-primary-outline-success" type="submit">Buscar</button>
+          </form>
         </div>
+      </div>
     </nav>
+  </header>
     <main>
         <div class="bloqueimghorizontal">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -102,35 +101,41 @@
               </div>
         </div>
         <div class="bloqueimghorizontal2 d-flex justify-content-end">
-            <a class="my-5" href="#"><p class="h2horizontal2">Habla con nuestros profesores y resuelve tus dudas <br>Haz click aquí
-            </p></a>
+            <a class="my-5" href="#"><p class="h2horizontal2">Habla con nuestros profesores y resuelve tus dudas <br>Haz click aquí</p></a>
         </div>
         <div class="bloqueimghorizontal3 d-flex align-items-center justify-content-center">
             <p>Mira los tipos de yoga que tenemos para ti!</p>
         </div>
         <div class="bloqueimghorizontal4">
-          <h2 class="h2horizontal">Hatha yoga</h2>
-          <img class="imghorizontal" src="../multimedia/imagenes/clases/tiposyoga/pexels-elina-fairytale-3822864.jpg" alt="">
-          <img class="imghorizontal2" src="../multimedia/imagenes/clases/tiposyoga/pexels-miriam-alonso-7593039.jpg" alt="">
-          <a class="my-5 p2horizontal" href="#"><p class="h2horizontal2">Conoce nuestros horarios y encuentros <br>Haz click aquí
-          </p></a>
+          <div class="divimghorizontal">
+            <img class="imghorizontal" src="../multimedia/imagenes/clases/tiposyoga/pexels-elina-fairytale-3822864.jpg" alt="">
+            <img class="imghorizontal2" src="../multimedia/imagenes/clases/tiposyoga/pexels-miriam-alonso-7593039.jpg" alt="">
+          </div>
+          <div class="divimghorizontal2">
+            <h2 class="h2horizontal">Hatha yoga</h2>
+            <a class=" p2horizontal" href="#"><p class="h2horizontal2">Conoce nuestros horarios y encuentros <br>Haz click aquí</p></a>
+          </div>
         </div>
         <div class="bloqueimghorizontal5">
-          <h2 class="h2horizontal">Ashtanga Yoga</h2>
-          <img class="imghorizontal" src="../multimedia/imagenes/clases/tiposyoga/ashtanga.jpg" alt="">
-          <img class="imghorizontal2" src="../multimedia/imagenes/clases/tiposyoga/ashtanga2.jpg" alt="">
-          <a class="my-5 p2horizontal" href="#"><p class="h2horizontal2">Conoce nuestros horarios y encuentros <br>Haz click aquí
-          </p></a>
+          <div class="divimghorizontal">
+            <img class="imghorizontal" src="../multimedia/imagenes/clases/tiposyoga/ashtanga2.jpg" alt="">
+            <img class="imghorizontal2" src="../multimedia/imagenes/clases/tiposyoga/ashtanga.jpg" alt="">
+          </div>
+          <div class="divimghorizontal2">
+            <h2 class="h2horizontal">Ashtanga yoga</h2>
+            <a class=" p2horizontal" href="#"><p class="h2horizontal2">Conoce nuestros horarios y encuentros <br>Haz click aquí</p></a>
+          </div>
         </div>
         <div class="bloqueimghorizontal6">
-          <h2 class="h2horizontal">Kundalini Yoga</h2>
-          <img class="imghorizontal" src="../multimedia/imagenes/clases/tiposyoga/kundalini.jpg" alt="">
-          <img class="imghorizontal2" src="../multimedia/imagenes/clases/tiposyoga/kundalini2.jpg" alt="">
-          <a class="my-5 p2horizontal" href="#"><p class="h2horizontal2">Conoce nuestros horarios y encuentros <br>Haz click aquí
-          </p></a>
+          <div class="divimghorizontal">
+            <img class="imghorizontal" src="../multimedia/imagenes/clases/tiposyoga/kundalini.jpg" alt="">
+            <img class="imghorizontal2" src="../multimedia/imagenes/clases/tiposyoga/kundalini2.jpg" alt="">
+          </div>
+          <div class="divimghorizontal2">
+            <h2 class="h2horizontal">Kundalini yoga</h2>
+            <a class="p2horizontal" href="#"><p class="h2horizontal2">Conoce nuestros horarios y encuentros <br>Haz click aquí</p></a>
+          </div>
         </div>
-
-        
     </main>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -140,18 +145,20 @@
 
 
     <!-- FOOTER -->
-    <footer class="container-fluid bg-primary d-flex justify-content-center align-items-center my-0 ">
+    <footer class="container-fluid colornavfooter d-flex justify-content-center align-items-center my-0 colornavfooter ">
+      <div class="contenedorfooter m-3">
+        <p class="text-light my-0 p-2 ">
+          Sígunenos en nuestras redes:
+        </p>
+      </div>
+      <div class="contenedorfooter d-flex ">
         <div class="contenedorfooter m-3">
-            <p class="text-light my-0 p-2 fs-5">
-                Sígunenos en nuestras redes:
-            </p>
+          <a class="nav-link active" aria-current="page" href="">Facebook</a>
         </div>
         <div class="contenedorfooter m-3">
-            <a class="nav-link active" aria-current="page" href="">Facebook</a>
+          <a class="nav-link active" aria-current="page" href="">Instagram</a>
         </div>
-        <div class="contenedorfooter m-3">
-            <a class="nav-link active" aria-current="page" href="">Instagram</a>
-        </div>
+      </div>
     </footer>
 
 </body>
