--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="nosotros, comunidad, yoga, meditación, latinoamerica">
     <meta name="description" content="Somos una comunidad de yoga nacida en Latinoamérica con el propósito de ayudarte a conectarte con tu cuerpo, mente y espíritu. Nuestro objetivo es brindarte una experiencia de yoga auténtica y accesible, con una comunidad de apoyo. Únete a nosotros y comienza tu camino hacia la paz interior y la armonía.">
     <!-- Bootstrap CSS -->
@@ -19,60 +19,59 @@
 <body class="bodybackgroundcolor1">
 
     <!-- AQUI VA EL ENCABEZADO -->
-    <header class="container-fluid bg-primary d-flex justify-content-center">
+    <aside class="container-fluid colornavfooter d-flex justify-content-center">
         <p class="text-light my-0 p-2 ">
-            Contáctanos: +(57) 300 567 264 2
+          Contáctanos: +(57) 300 567 264 2
         </p>
-    </header>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light estiloa m-3">
+      </aside>
+    <header>
+      <nav id="top" class="navbar navbar-expand-lg navbar-light bg-light estiloa m-3 colornavfooter">
         <div class="container-fluid">
-            <img class="logo-small me-5" src="../multimedia/imagenes/logob.JPG" alt="logo">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item m">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../paginas/ropa.html">Ropa</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../paginas/articulos.html">Artículos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../paginas/nosotros.html"> Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../paginas/clases.html">Clases</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Escribe aquí para buscar"
-                        aria-label="Search">
-                    <button class="btn btn-primary btn-primary-outline-success" type="submit">Buscar</button>
-                </form>
-            </div>
+          <img class="logo-small me-5" src="../multimedia/imagenes/logob.JPG" alt="logo de tienda">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item m">
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="ropa.html">Ropa</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="articulos.html">Artículos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="nosotros.html"> Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="clases.html">Clases</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Escribe aquí para buscar" aria-label="Search">
+              <button class="btn colornavfooter btn-primary-outline-success" type="submit">Buscar</button>
+            </form>
+          </div>
         </div>
-    </nav>
+      </nav>
+    </header>
     <main>
         <div class="bloqueimghorizontal">
             <h2 class="h2horizontal">Sobre nosotros</h2>
             <img class="imagenhorizontal" src="../multimedia/imagenes/nosotros/nosotros5.jpg" alt="Imagen portada">
         </div>
-        <div class="container my-5">
+        <div class="container my-3">
             <div class="row d-flex ">
                 <p class="my-4 contenedorpantalonbackgroundcolor">Nuestra tienda nació como una inspiración de comunidad y apoyo a quienes buscan un camino más consciente y equilibrado en sus vidas. Creemos que la meditación y el yoga son dos poderosas formas de conectar con nuestra esencia y vivir con más presencia y armonía en el mundo.</p>
                 <img src="../multimedia/imagenes/nosotros/suramerica.jpg" alt="imagen para suramerica">
                 <p class="my-4 contenedorpantalonbackgroundcolor">Buscamos crear una comunidad en Latinoaméricapara brindar un espacio en el que puedas conectarte con otras personas que comparten tus intereses y valores.Queremos contribuir a la transformación de la sociedad desde nuestra tienda, promoviendo valores como la empatía, la inclusión y el respeto. ¡Únete a nuestra comunidad!</p>
             </div>
         </div>
-        <div class="container my-5 ">
-            <h2 class="my-5 colorfondotitulotop">¡Mira como hemos crecido!</h2>
+        <div class="container my-3 ">
+            <h2 class="my-3 colorfondotitulotop">¡Mira como hemos crecido!</h2>
             <div class=" d-flex flex-nowrap ">
                 <div class="divisioncrecimiento ">
                     <p>25</p>
@@ -88,17 +87,12 @@
                 </div>
             </div>
         </div>
-        <div class="container my-5">
-            <h2 class="my-5 colorfondotitulotop ">Somos nuestro equipo</h2>
+        <div class="container my-3">
+            <h2 class="my-3 colorfondotitulotop ">Somos nuestro equipo</h2>
             <div class=" d-flex ">
                 <img class="imgexpandir" src="../multimedia/imagenes/nosotros/nosotros_motivacion.jpg" alt="imagen equipo sonriente">
             </div>
         </div>
-
-
-
-
-
     </main>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -108,20 +102,21 @@
 
 
     <!-- FOOTER -->
-    <footer class="container-fluid bg-primary d-flex justify-content-center align-items-center my-0 ">
+    <footer class="container-fluid colornavfooter d-flex justify-content-center align-items-center my-0 colornavfooter ">
         <div class="contenedorfooter m-3">
-            <p class="text-light my-0 p-2 fs-5">
-                Sígunenos en nuestras redes:
-            </p>
+          <p class="text-light my-0 p-2 ">
+            Sígunenos en nuestras redes:
+          </p>
         </div>
-        <div class="contenedorfooter m-3">
+        <div class="contenedorfooter d-flex ">
+          <div class="contenedorfooter m-3">
             <a class="nav-link active" aria-current="page" href="">Facebook</a>
-        </div>
-        <div class="contenedorfooter m-3">
+          </div>
+          <div class="contenedorfooter m-3">
             <a class="nav-link active" aria-current="page" href="">Instagram</a>
+          </div>
         </div>
-    </footer>
-
+      </footer>
 </body>
 
 </html>
