--- a/paginas/ropa.html
+++ b/paginas/ropa.html
@@ -1,12 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="ropa, yoga, shorts, pantalones, tops">
-    <meta name="description" content="Encuentra la ropa perfecta para tu práctica de yoga en nuestra tienda en línea. Descubre nuestra selección de shorts, tops y pantalones de yoga cómodos y de alta calidad para ayudarte a concentrarte en tu práctica. ¡Compra ahora y mejora tu experiencia de yoga con nuestra ropa!">
+    <meta name="description"
+        content="Encuentra la ropa perfecta para tu práctica de yoga en nuestra tienda en línea. Descubre nuestra selección de shorts, tops y pantalones de yoga cómodos y de alta calidad para ayudarte a concentrarte en tu práctica. ¡Compra ahora y mejora tu experiencia de yoga con nuestra ropa!">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -17,46 +18,47 @@
 <body class="bodybackgroundcolor1">
 
     <!-- AQUI VA EL ENCABEZADO -->
-    <header class="container-fluid bg-primary d-flex justify-content-center">
+    <aside class="container-fluid colornavfooter d-flex justify-content-center">
         <p class="text-light my-0 p-2 ">
             Contáctanos: +(57) 300 567 264 2
         </p>
-    </header>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light estiloa m-3">
-        <div class="container-fluid">
-            <img class="logo-small me-5" src="../multimedia/imagenes/logob.JPG" alt="logo">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item m">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Ropa</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../paginas/articulos.html">Artículos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../paginas/nosotros.html"> Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../paginas/clases.html">Clases</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Escribe aquí para buscar"
-                        aria-label="Search">
-                    <button class="btn btn-primary btn-primary-outline-success" type="submit">Buscar</button>
-                </form>
+    </aside>
+    <header>
+        <nav id="top" class="navbar navbar-expand-lg navbar-light bg-light estiloa m-3 colornavfooter">
+            <div class="container-fluid">
+                <img class="logo-small me-5" src="../multimedia/imagenes/logob.JPG" alt="logo de tienda">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item m">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="ropa.html">Ropa</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="articulos.html">Artículos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="nosotros.html"> Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="clases.html">Clases</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Escribe aquí para buscar"
+                            aria-label="Search">
+                        <button class="btn colornavfooter btn-primary-outline-success" type="submit">Buscar</button>
+                    </form>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
     <main>
         <div class="contenedormaingrid">
             <div class="gridhijo1">
@@ -134,7 +136,7 @@
 
         </div>
         <div class="contenedormain contenedorpantalonbackgroundcolor">
-            <div class="contenedortitulosropa colorfondotitulojogger">
+            <div class="contenedortitulosropa colorfondotitulotop">
                 <h2>Joggers</h2>
             </div>
 
@@ -250,7 +252,8 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-    <footer class="container-fluid bg-primary d-flex justify-content-center align-items-center my-0 ">
+    <footer
+        class="container-fluid colornavfooter d-flex justify-content-center align-items-center my-0 colornavfooter ">
         <div class="contenedorfooter m-3">
             <p class="text-light my-0 p-2 ">
                 Sígunenos en nuestras redes:
@@ -264,9 +267,7 @@
                 <a class="nav-link active" aria-current="page" href="">Instagram</a>
             </div>
         </div>
-        
     </footer>
-
 </body>
 
 </html>
